tests/src/frontend/typechecking/invalid/pattern_match_mutable_outside_scope_when.sk
mutable class Bar(mutable baz: String)

fun shouldFail(): String {
  nope = () -> mutable Bar("NiceTry");
  bar = Bar("Wut");

  bar match {
  | _ if (nope().baz == "NiceTry") -> "BOOOOM\n"
  | _ -> "Fail\n"
  }
}
